--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -47,7 +47,6 @@
                   </div>
                 </div>
                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 bhoechie-tab">
-                    <!-- flight section -->
                     <div class="bhoechie-tab-content active">
                         <center>
                           <h1 class="glyphicon glyphicon-plane" style="font-size:14em;color:#55518a"></h1>
@@ -55,7 +54,6 @@
                           <h3 style="margin-top: 0;color:#55518a">Make an Item Set</h3>
                         </center>
                     </div>
-                    <!-- train section -->
                     <div class="bhoechie-tab-content">
                         <center>
                           <h1 class="glyphicon glyphicon-road" style="font-size:12em;color:#55518a"></h1>
@@ -63,8 +61,6 @@
                           <h3 style="margin-top: 0;color:#55518a">Upload your item sets</h3>
                         </center>
                     </div>
-        
-                    <!-- hotel search -->
                     <div class="bhoechie-tab-content">
                         <center>
                           <h1 class="glyphicon glyphicon-home" style="font-size:12em;color:#55518a"></h1>
@@ -83,7 +79,7 @@
                         <center>
                           <h1 class="glyphicon glyphicon-credit-card" style="font-size:12em;color:#55518a"></h1>
                           <h2 style="margin-top: 0;color:#55518a">Coming Soon</h2>
-                          <h3 style="margin-top: 0;color:#55518a">Login and get started</h3>
+                          <h3 style="margin-top: 0;color:#55518a">Get an item set for your matchup</h3>
                         </center>
                     </div>
                 </div>
