--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -99,6 +99,15 @@
             });
         });
     </script>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-mid-8">
+                    <p>Italian Sushi isn't endorsed by Riot Games and neither reflects the views or opinions of Riot Games nor anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
