--- a/static/css/index.css
+++ b/static/css/index.css
@@ -75,10 +75,9 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
 }
 
 .footer{
-    position:fixed;
-    bottom:0;
-    left:6%;
-    margin-left:-50px; /*negative half the width */
-    width:100px;
-    height:100px;
+    bottom: 0;
+    height: 50px;
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
