--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -24,9 +24,9 @@
 
 
 <body>
-    <div class="container">
+    <div class="container section-container">
     	<div class="row">
-            <div class="col-md-8 col-md-offset-2 bhoechie-tab-container">
+            <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 bhoechie-tab-container">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
                   <div class="list-group">
                     <a href="#" class="list-group-item active text-center">
