--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,10 +5,10 @@
 /*  bhoechie tab */
 .section-container{
   background-color: #55518a;
-  padding-top: 10%;
-  padding-bottom: 10%;
-/*  margin-bottom: 10%; */
-  
+  padding-top: 8%;
+  padding-bottom: 8%;
+  width: 100%;
+
 }
 
 div.bhoechie-tab-container{
