added login ability

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,8 +5,8 @@
 /*  bhoechie tab */
 .section-container{
   background-color: #55518a;
-  padding-top: 8%;
-  padding-bottom: 8%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   width: 100%;
 
 }
@@ -82,10 +82,62 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
   display: none;
 }
 
-/*.footer{
-    bottom: 0;
-    height: 50px;
-    left: 0;
-    position: absolute;
-    width: 100%;
+.btn-side {
+  margin-bottom: 10px;
+}
+
+/* fix for bootbox fadein issue */
+.modal-backdrop.fade.in {
+  z-index: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.form-title {
+  color: #555;
+  font-size: 18px;
+  font-weight: 400;
+  display: block;
+}
+
+.form-login .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.form-login {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+.form-login input[type="text"] {
+    margin-bottom: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.form-login input[type="password"] {
+    margin-bottom: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+/* overriding a bootstrap default 20px margin bottom */
+.navbar {
+  margin-bottom: 0px;
+}
+/*.account-wall {
+    margin-top: 20px;
+    padding: 40px 0px 20px 0px;
+    background-color: #f7f7f7;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }*/
