--- a/static/css/index.css
+++ b/static/css/index.css
@@ -83,13 +83,13 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
 }
 
 .btn-side {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
-/* fix for bootbox fadein issue */
-.modal-backdrop.fade.in {
+/* fix for bootbox fadein issue -- no longer needed as of Aug 20 wtf */
+/*.modal-backdrop.fade.in {
   z-index: 0;
-}
+}*/
 
 .text-center {
   text-align: center;
@@ -133,11 +133,23 @@ div.bhoechie-tab div.bhoechie-tab-content:not(.active){
 .navbar {
   margin-bottom: 0px;
 }
-/*.account-wall {
-    margin-top: 20px;
-    padding: 40px 0px 20px 0px;
-    background-color: #f7f7f7;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
+/*.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }*/
