--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -12,12 +12,16 @@
 
     <title>Italian Sushi</title>
 
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-    <link href="{% static "font-awesome-4.4.0/css/font-awesome.min.css" %}" rel="stylesheet">
+
+    <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet"> -->
+    <!-- <link href="{% static "font-awesome-4.4.0/css/font-awesome.min.css" %}" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="{% static "css/index.css" %}" rel="stylesheet">
 
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+    <!-- <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{% static "js/bootbox.min.js" %}"></script>
 
 </head>
@@ -55,7 +59,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if logged_in %}
-                    <li><a href="../logout/">Logout</a></li> 
+                    <li><a href="../logout/">{{ user.username }} | Logout</a></li> 
                     {% else %}
                     <li><a href="" class="login-popup">Login</a></li> 
                     {% endif %}
@@ -100,14 +104,29 @@
                             <h5 style="margin-top: 0;color:#55518a">It looks like you aren't logged in. 
                             You must log in to save item sets to your profile. 
                             If you don't have an account, you can create one for free! </h5>
-                            <br>
-                            <a href="#" id="login-btn" class="btn btn-lg btn-primary btn-side login-popup" type="submit">
+                            
+                            <a href="#" id="login-btn" class="btn btn-md btn-primary btn-side login-popup">
                                 Log In</a>
                             &nbsp;
-                            <a href="#" id="createuser-btn" class="btn btn-lg btn-primary btn-side createuser-popup" type="submit">
+                            <a href="#" id="createuser-btn" class="btn btn-md btn-primary btn-side createuser-popup">
                                 Create Account</a>
                             {% elif logged_in %}
-                            <h5 style="margin-top: 0;color:#55518a">Welcome {{ user.username }}!</h5>
+                            <!-- <h5 style="margin-top: 0;color:#55518a">Welcome {{ user.username }}! Select an item set JSON file
+                            to upload and store to your account. </h5> -->
+                            <form method="POST" enctype="multipart/form-data" action="/upload/">
+                                {% csrf_token %}
+                                <input type="file" style="margin-bottom:5px" name="json" required/>
+                                <!-- <span class="btn btn-default btn-file">
+                                    Browse <input type="file">
+                                </span> -->
+                                <!-- <label class="btn btn-primary" for="my-file-selector">
+                                    <input id="my-file-selector" type="file" style="display:none;">
+                                    Browse
+                                </label> -->
+                                <input type="submit" name="submit" value="Upload" class="btn btn-md btn-primary btn-side"/>
+                                <a href="#" id="viewfiles-btn" class="btn btn-md btn-primary btn-side viewfiles-popup">
+                                View Uploaded Sets</a>
+                            </form>
                             {% endif %}
                         </center>
                     </div>
@@ -233,6 +252,19 @@
                         }
                     }
                 }
+            });
+        });
+
+        $('.viewfiles-popup').click(function(e){
+            e.preventDefault();
+            console.log("createuser-btn clicked");
+            bootbox.dialog({
+                
+                message: '<div class="row">'
+                            + '<div class="col-xs-12">'
+                                + '<h1 class="text-center form-title"> TODO: View files saved to your profile via AJAX </h1>'
+                            + '</div>'
+                        + '</div>',
             });
         });
 
