database changes, background image attempted to be added

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,7 +4,7 @@
 
 /*  bhoechie tab */
 .section-container{
-  background-color: #55518a;
+/*  background-color: #55518a;*/
   padding-top: 5%;
   padding-bottom: 5%;
   width: 100%;
