--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -70,7 +70,8 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <div class="container section-container">
+    <div class="container section-container" style="background-image: url({% static "img/rivenblitz.jpg" %}); 
+    max-width:100%; max-height:100%; background-size:contain; background-repeat:no-repeat; position:relative;">
     	<div class="row">
             <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 bhoechie-tab-container">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
