--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -28,7 +28,6 @@
 
 
 <body>
-    <background="garenlux.jpg">
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header">
@@ -71,7 +70,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <div class="container section-container" style="background-image: url({% static "img/rivenblitz.jpg" %}); 
+    <div class="container section-container" style="background-image: url(http://i.imgur.com/0IYtdou.jpg);
     max-width:100%; max-height:100%; background-size:cover; background-repeat:no-repeat; position:relative;">
     	<div class="row">
             <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 bhoechie-tab-container">
@@ -170,7 +169,7 @@
             <div class="row">
                 <div class="col-mid-8">
                     <p>
-                    Italian Sushi isn't endorsed by Riot Games and neither 
+                    Italian Sushi is not endorsed by Riot Games and neither
                     reflects the views or opinions of Riot Games nor anyone 
                     officially involved in producing or managing League of Legends. 
                     League of Legends and Riot Games are trademarks or registered 
@@ -341,7 +340,6 @@
         console.log(getUrlParameter('upload'));
 
     </script>
-    </background>
 </body>
 
 
